objects/ASI_CRM_WS_Evaluation__c.object
<CustomObject>
    <description>ASI_CRM_WS_Evaluation</description>
    <fields>
        <fullName>ASI_CRM_CN_Period_End_Date__c</fullName>
        <formula>if (ispickval( ASI_CRM_Quarter__c , &apos;Q1 (Jul - Sept)&apos;), DATE( Value(LEFT(TEXT(ASI_CRM_Fiscal_Year__c ), 4)), 9, 30), 
IF( 
ispickval( ASI_CRM_Quarter__c , &apos;Q2 (Oct - Dec)&apos;), DATE( value( LEFT(TEXT(ASI_CRM_Fiscal_Year__c) , 4)), 12, 31),IF( 
ispickval( ASI_CRM_Quarter__c , &apos;Q3 (Jan - Mar)&apos;), DATE( value(RIGHT(TEXT(ASI_CRM_Fiscal_Year__c) , 4)), 3, 31),IF( 
ispickval( ASI_CRM_Quarter__c , &apos;Q4 (Apr - Jun)&apos;), DATE( value(RIGHT(TEXT(ASI_CRM_Fiscal_Year__c ), 4)), 6, 30),TODAY() 
) ) 
) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Period_Start_Date__c</fullName>
        <formula>if (ispickval( ASI_CRM_Quarter__c , &apos;Q1 (Jul - Sept)&apos;), DATE( Value(LEFT(TEXT(ASI_CRM_Fiscal_Year__c ), 4)), 7, 1), 
IF( 
ispickval( ASI_CRM_Quarter__c , &apos;Q2 (Oct - Dec)&apos;), DATE( value( LEFT(TEXT(ASI_CRM_Fiscal_Year__c) , 4)), 10, 1),IF( 
ispickval( ASI_CRM_Quarter__c , &apos;Q3 (Jan - Mar)&apos;), DATE( value(RIGHT(TEXT(ASI_CRM_Fiscal_Year__c) , 4)), 1, 1),IF( 
ispickval( ASI_CRM_Quarter__c , &apos;Q4 (Apr - Jun)&apos;), DATE( value(RIGHT(TEXT(ASI_CRM_Fiscal_Year__c ), 4)), 4, 1),TODAY() 
) ) 
) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Total_Amount__c</fullName>
        <inlineHelpText>Roll up summary (Incentive)</inlineHelpText>
        <label>Total Amount</label>
        <summarizedField>ASI_CRM_WS_Evaluation_Items__c.ASI_CRM_incentive__c</summarizedField>
        <summaryForeignKey>ASI_CRM_WS_Evaluation_Items__c.ASI_CRM_WS_Evaluation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2013/2014</fullName>
                </value>
                <value>
                    <fullName>2014/2015</fullName>
                </value>
                <value>
                    <fullName>2015/2016</fullName>
                </value>
                <value>
                    <fullName>2016/2017</fullName>
                </value>
                <value>
                    <fullName>2017/2018</fullName>
                </value>
                <value>
                    <fullName>2018/2019</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Period_End__c</fullName>
        <label>Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Period_Start__c</fullName>
        <label>Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Quarter__c</fullName>
        <label>Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1 (Jul - Sept)</fullName>
                </value>
                <value>
                    <fullName>Q2 (Oct - Dec)</fullName>
                </value>
                <value>
                    <fullName>Q3 (Jan - Mar)</fullName>
                </value>
                <value>
                    <fullName>Q4 (Apr - Jun)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Submission_Date__c</fullName>
        <label>Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_WS_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_WS_Evaluations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_WS_Evaluations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_WS_Addition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>T1 WS</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.ASI_CRM_CN_WS_Tier__c</field>
                <operation>equals</operation>
                <value>T1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>WS Evaluations</relationshipLabel>
        <relationshipName>WS_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_WS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>T1 WS (Account)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>WS Evaluations</relationshipLabel>
        <relationshipName>ASI_CRM_WS_Evaluations_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>WS Evaluation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Fiscal_Year__c</columns>
        <columns>ASI_CRM_Quarter__c</columns>
        <columns>ASI_CRM_T1_WS_Addition__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>zh_CN</language>
    </listViews>
    <nameField>
        <displayFormat>WSE-{000000}</displayFormat>
        <label>WS Evaluation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WS Evaluations</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_WS_Evaluation</fullName>
        <active>true</active>
        <label>CN WS Evaluation</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>